chore: add double check for data preprocessing

--- a/src/2-preprocessing.ipynb
+++ b/src/2-preprocessing.ipynb
@@ -396,7 +396,7 @@
        "2    7250\n",
        "3    7250\n",
        "4    7250\n",
-       "Name: company_size, dtype: int32"
+       "Name: company_size, dtype: int64"
       ]
      },
      "execution_count": 6,
@@ -567,7 +567,7 @@
      "data": {
       "text/plain": [
        "company                object\n",
-       "company_size            int32\n",
+       "company_size            int64\n",
        "job_title              object\n",
        "level                  object\n",
        "domain                 object\n",
@@ -1068,12 +1068,12 @@
      "data": {
       "text/plain": [
        "company                object\n",
-       "company_size            int32\n",
+       "company_size            int64\n",
        "job_title              object\n",
        "level                  object\n",
        "domain                 object\n",
-       "yoe_total               int32\n",
-       "yoe_at_company          int32\n",
+       "yoe_total               int64\n",
+       "yoe_at_company          int64\n",
        "base                  float64\n",
        "stock                 float64\n",
        "bonus                 float64\n",
@@ -1317,12 +1317,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save the preprocessed data"
+    "### Double check the data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1250 entries, 0 to 1278\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   company             1250 non-null   object \n",
+      " 1   company_size        1250 non-null   int64  \n",
+      " 2   job_title           1250 non-null   object \n",
+      " 3   level               1250 non-null   object \n",
+      " 4   domain              1250 non-null   object \n",
+      " 5   yoe_total           1250 non-null   int64  \n",
+      " 6   yoe_at_company      1250 non-null   int64  \n",
+      " 7   base                1250 non-null   float64\n",
+      " 8   stock               1250 non-null   float64\n",
+      " 9   bonus               1250 non-null   float64\n",
+      " 10  total_compensation  1250 non-null   float64\n",
+      " 11  location            1250 non-null   object \n",
+      "dtypes: float64(4), int64(3), object(5)\n",
+      "memory usage: 127.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "company               0.0\n",
+       "company_size          0.0\n",
+       "job_title             0.0\n",
+       "level                 0.0\n",
+       "domain                0.0\n",
+       "yoe_total             0.0\n",
+       "yoe_at_company        0.0\n",
+       "base                  0.0\n",
+       "stock                 0.0\n",
+       "bonus                 0.0\n",
+       "total_compensation    0.0\n",
+       "location              0.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_df.apply(missing_ratio)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save the preprocessed data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1346,7 +1420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
