--- a/src/3-exploration.ipynb
+++ b/src/3-exploration.ipynb
@@ -398,17 +398,7 @@
     "- The mean (and you can go further with advanced techiques as Arithmetic mean, Geometric mean, Harmonic mean)\n",
     "- The median\n",
     "- The mode\n",
-    "- Quantiles (Quartiles, Percentiles, Deciles, Crocodiles?)\n",
-    "- Range and IQR (Interquartile Range) (you might find that its relation to box plots)\n",
-    "- Variance and Standard deviation (std dev)\n",
-    "- Coefficient of Variation\n",
-    "- Skewness\n",
-    "- Kurtosis\n",
-    "- Standard Error (of the sample mean)\n",
-    "- Moments\n",
-    "- Covariance and Correlation\n",
-    "\n",
-    "Due the scope of this lab, you just need to use basic function of Pandas to calculate basic descriptive statistics information and give insights from it."
+    "- Quantiles (Quartiles, Percentiles, Deciles, Crocodiles?)"
    ]
   },
   {
