--- a/src/3-exploration.ipynb
+++ b/src/3-exploration.ipynb
@@ -1428,7 +1428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 4:** What is What is the average bonus of the top 10 companies?"
+    "**Question 4:** What is the average bonus of the top 10 companies?"
    ]
   },
   {
